<menu xmlns:android="http://schemas.android.com/apk/res/android" >

   

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
   <item
        android:id="@+id/id_action_clip"
        android:icon="@drawable/actionbar_clip_icon"
        android:showAsAction="always|withText"
        android:title="裁切"/>

    
     <item
        android:id="@+id/item_clear_memory_cache"
        android:title="@string/menu_item_clear_memory_cache"/>
    <item
        android:id="@+id/item_clear_disc_cache"
        android:title="@string/menu_item_clear_disc_cache"/>
    <item
        android:id="@+id/item_pause_on_scroll"
        android:checkable="true"
        android:title="@string/menu_item_pause_on_scroll"
        android:visible="false"/>
    <item
        android:id="@+id/item_pause_on_fling"
        android:checkable="true"
        android:title="@string/menu_item_pause_on_fling"
        android:visible="false"/>
    
    
</menu>
